--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.21</version>
+        </dependency>
 
         <dependency>
             <groupId>com.github.jai-imageio</groupId>
