--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,14 @@
-##Data Source Properties
-#spring.datasource.url=jdbc:postgresql://localhost:5432/tour
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=org.postgresql.Driver
-##JPA Properties
-#spring.jpa.properties.hibernate.format_sql=TRUE
-#spring.jpa.database=postgresql
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.open-in-view=false
+#Data Source Properties
+spring.datasource.url=jdbc:postgresql://bkmzli.ddns.net:5432/tour
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+#JPA Properties
+spring.jpa.properties.hibernate.format_sql=TRUE
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/tour
-spring.datasource.username=mysql
-spring.datasource.password=mysql
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.open-in-view=false
 
 spring.servlet.multipart.max-file-size=3000MB
 spring.servlet.multipart.max-request-size=3000MB
